This file describes changes in the IO package.

4.7.0 (2019-07-17)
  - Add IO_CallWithTimeout
  - Remove CheckForUpdates, it was hopelessly broken
  - Make IO_stat/IO_lstat/IO_fstat compatible with large files
  - Various janitorial changes

4.6.0 (2019-03-15)
  - Change minimal required GAP version to 4.10
  - Fix for profiling when IO_fork is called
  - Add License field to PackageInfo.g
  - Fix various (harmless) compiler warnings
  - Various internal changes to better work with newer (and future) GAP versions
    (avoid including src/iostream.h, avoid C_NEW_STRING, modernize build system)

4.5.4 (2018-09-19)
  - Add IO_getcwd to query the current working directory
  - Fix ChangeDirectoryCurrent when used with relative paths
    (it used to set GAPInfo.DirectoryCurrent to an invalid value)

4.5.3 (2018-09-18)
  - Minimal GAP version is 4.9 (it already effectively was in 4.5.2, but PackageInfo.g
    had not been updated)

4.5.2 (2018-08-21)
  - Add exit status to IO_WaitPid (contributed by Chris Jefferson, PR #64)
  - Make IO usable in the HPC-GAP threads (contributed by Mohamed Barakat, PR #65)
  - Fix a failure in the HTTP part of the test suite
  - Replace the deprecated `Elements` in examples by `AsSet`
  - Clarify IO_WaitPid documentation
  - Various minor changes to the build system and test suite

4.5.1 (2018-01-10)
  - Fix a bug which could break usage IO_mkstemp or IO_mkdtemp in
    a loaded GAP workspace
  - Improve integration with GAP 4.9 build system

4.5.0 (2017-11-20)
  - Compatible with GAP 4.9
  - Add support for (un)pickling ranges and character tables
    (contributed by Thomas Breuer)
  - Add automatic call to InstallSIGCHLDHandler() when IO_Fork is used
    directly or indirectly. As a consequence, code directly calling
    IO_fork must now always call IO_WaitPid or the new IO_IgnorePid
  - Fix error handling in ChangeDirectoryCurrent
  - Fix link to issue tracker in the manual
  - Fix building the documentation on case sensitive file systems